# asynchronous_federated_learning_simulation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: base_config.yaml
src/: __init__.py  asynchronous_clock.py  client.py  data_loader.py  dirichlet_split.py  server.py  simple_cnn.py
src/afl_sim/: __init__.py  cli.py  config.py  enums.py  simulation.py  types.py
src/afl_sim/core/: client.py  server.py
src/afl_sim/data/: data_manager.py  data_partitioner.py
src/afl_sim/models/: __init__.py  model_factory.py
src/afl_sim/timing/: __init__.py  clock_factory.py
src/afl_sim/utils/: __init__.py  checkpoint_manager.py  device_manager.py  helpers.py  logging.py  visualization.py
tests/: conftest.py  test_config.py  test_data_partitioner.py  test_visualization.py
tests/tests_utils/: test_checkpoint_manager.py  test_device_manager.py
